vizsgaprojekt/book/confirm.css
#hatter {
    height: 92vh;
    padding-top: 4%;
    padding-left: 15%;
    padding-right: 15%;
}
#keret{
    background-color: hsl(0, 0%, 20%);
    color: #fff;
    border-radius: 20px;
    box-shadow: 0px 0px 21px 4px rgb(0 0 0 / 50%);
    padding: 2%;
    display: flex;
}
#baloldal {
    width: 45%;
}
#jobboldal {
    width: 45%;
    margin-left: auto;
}

#baloldal .header, #jobboldal .header {
    font-family: "Be Vietnam Pro", sans-serif;
    display: flex;
}
.header h1 {
  font-size: 2rem;
}
.divider {
    width: 70%;
    height: 5px;
    border-radius: 5px;
    background-color: #C5B358;
    margin-bottom: 15px;
}
.smalldivider {
    width: 100%;
    height: 3px;
    border-radius: 5px;
    background-color: #C5B358;
    margin-bottom: 10px;
}
#baloldal .details {
}
#baloldal .details div span {
    float: right;
}
#jobboldal .details div span {
  float: right;
}

.finalize, .edit, .cancel {
    background-color: hsl(0, 0%, 10%);
    color: white;
    border-radius: 20px;
    text-align: center;
    padding-bottom: 8px;
    padding-top: 8px;
    padding-right: 15px;
    padding-left: 15px;
    text-decoration: none;
    text-transform: uppercase;
    font-family: "Be Vietnam Pro",  sans-serif;
    transition: 0.3s;
  }
  .edit{
      /* margin-right: 1vw !important; */
      border: 2px solid #C5B358;
      margin-left: 0;
      margin-left: auto;
  }
  .edit:hover {
    color: white;
    background-color: #C5B358;
    text-decoration: none;
    transition: 0.3s;
  }
  .finalize{
    margin-right: 0vw !important;
    border: 2px solid green;
    transition: 0.5s;
    margin-top: 4vh;
    margin-left: auto;
  }
  .finalize i {
    transform: rotate(-360deg);
    transition: 0.5s;
  }
  .finalize:hover {
    background-color: green;
    transition: 0.3s;
  }
  .finalize:hover i {
    transform: rotate(0deg);
    transition: 0.5s;
  }
  .cancel{
    margin-top: 4vh;
    margin-right: 1vw !important;
    border: 2px solid red;
    float: left !important;
    margin-left: 0;
}
.cancel:hover {
  color: white;
  background-color: red;
  text-decoration: none;
  transition: 0.3s;
}
.cancel i {
  transition: 0.3s;
}
.cancel:hover i {
  transform: rotate(90deg);
  transition: 0.3s;
}

#finalizeres {
  margin-top: 6vh;
}
#terms a{
    text-decoration: none;
    color: #C5B358;
}
#terms a:hover {
    text-decoration: underline;
}
.form-check-input[type=checkbox] {
  filter: invert(67%) sepia(51%) saturate(414%) hue-rotate(13deg) brightness(99%) contrast(83%);
}

@media screen and (max-width: 1600px){
  #hatter {
    padding-left: 5%;
    padding-right: 5%;
  }
}
@media screen and (max-width: 1320px){
  #hatter {
    padding-left: 1%;
    padding-right: 1%;
  }
}
@media screen and (max-width: 1200px){
  #hatter {
    padding-left: 20%;
    padding-right: 20%;
    height: unset;
    padding-bottom: 15vh;
    padding-top: 5vh;
  }
  #keret {
    display: block;
    padding: 5%;
  }
  #baloldal, #jobboldal {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }
  #jobboldal {
    margin-top: 7%;
  }
}
@media screen and (max-width: 980px){
  #hatter {
    padding-left: 15%;
    padding-right: 15%;
  }
}
@media screen and (max-width: 820px){
  #hatter {
    padding-left: 10%;
    padding-right: 10%;
    padding-bottom: 15vh;
  }
}
@media screen and (max-width: 700px){
  #hatter {
    padding-left: 1%;
    padding-right: 1%;
  }
}
@media screen and (max-width: 570px){
  .edit {
    width: 30%;
    height: 30%;
    margin: auto !important;
  } 
  .header h1 {
    width: 70%;
  }
  #baloldal .details, #jobboldal .details {
    font-size: 14px;
  }
  #szobanev label{
    margin-bottom: 0;
  }
  #szobanev span{
    margin-bottom: 0.5rem;
  }
}



  

